ignore aws eb files

--- a/.gitignore
+++ b/.gitignore
@@ -142,3 +142,8 @@ cython_debug/
 
 # Mac 
 .DS_Store
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
